django_projects/pimp/fixtures/projects/1/samples/NEG/Beer_1_full3.mzXML
version https://git-lfs.github.com/spec/v1
oid sha256:d61c891e92794bdd4100e95b2794adb0e1abe4884712438364beb692bee643e8
size 15766826
